# homebrew-repos

./: .debmake  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.org  git-prompt.sh  go.mod  main.go  make_ssm.sh  modulefile.in  range.sh  repos.rb  repos.yml  repos_completion.bash  repos_options.txt  use-repos.bash  use-repos.zsh
cmake/modules/: orgmanpages.cmake
completions/: repos_completion.bash  repos_completion.fish  repos_completion.zsh  repos_options.txt
debian/: README.Debian  changelog  control  copyright  files
libexec/repos/: _repos_base.py  _repos_logging.py  git-recent.py  git-url-completion-helper.py  repo-add.py  repo-adder.py  repo-del.py  repo-finder.py  repo-ignore.py  repos-add.py  repos-clone.py  repos-comment.py  repos-del.py  repos-find.py  repos-ignore.py
man/man1/: repos.man  repos.org
rust/repos-add/: Cargo.toml
rust/repos-add/src/: main.rs
scripts/: create_test_ssm_domain.sh  git-recent  make_ssm_control_file.py  pygit-recent.py  repo_finder.py  revlist-recent.py
share/man/man1/: git-recent.org  orcd.org  orepos.org  rcd.1  rcd.org  repo-finder.org  repos-add.org  repos-del.org  repos-find.org  repos-ignore.org  repos.org
src/: go.mod  main.go
